kubernetes/external-routes/homeassistant/service.yml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
spec:
  ports:
  - protocol: TCP
    port: 8123
    targetPort: 8123
