kubernetes/external-routes/homeassistant/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-ingressroute
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`homeassistant.eggenberg.io`)
    kind: Rule
    services:
    - name: homeassistant
      port: 8123
  tls:
    secretName: homeassistant-certificate-secret
